--- a/index.html
+++ b/index.html
@@ -44,40 +44,40 @@
                       <div class=triangle></div>
                       <div class="main-nav-dropdown-menu" id="main-nav-dropdown-menu1" >
                         <ul>
-                            <li><a>קורס סייבר ואבטחת מידע Ethical Hacking</a></li>
+                            <li><a class="drop-a-text">קורס סייבר ואבטחת מידע Ethical Hacking</a></li>
                 <li>
-                    <a>קורס ניהול רשתות, אבטחת מידע ומחשוב ענן</a> </li>
+                    <a class="drop-a-text">קורס ניהול רשתות, אבטחת מידע ומחשוב ענן</a> </li>
                 <li>
-                    <a>קורס שיווק דיגיטלי - קורס קידום אתרים, רשתות חברתיות, פרסום ומכירות באינטרנט</a></li>
+                    <a class="drop-a-text">קורס שיווק דיגיטלי - קורס קידום אתרים, רשתות חברתיות, פרסום ומכירות באינטרנט</a></li>
                 <li>
-                    <a>קורס QA בודק תוכנה</a> </li>
+                    <a class="drop-a-text">קורס QA בודק תוכנה</a> </li>
                 </ul>
                 <ul>
                     <li>
-                        <a>קורס עיצוב גרפי עם התמחות ב-UI/UX</a></li>
+                        <a class="drop-a-text">קורס עיצוב גרפי עם התמחות ב-UI/UX</a></li>
                     <li>
-                        <a>קורס בניית אתרים - Full Stack Development</a> </li>
+                        <a class="drop-a-text">קורס בניית אתרים - Full Stack Development</a> </li>
                     <li>
-                        <a>קורס פיתוח אפליקציות ל-Android ול-iPhone</a> </li>
+                        <a class="drop-a-text">קורס פיתוח אפליקציות ל-Android ול-iPhone</a> </li>
                     <li>
-                        <a>קורס ניהול שרתי לינוקס (Linux)</a> </li>
+                        <a class="drop-a-text">קורס ניהול שרתי לינוקס (Linux)</a> </li>
                 </ul>
 
                 <ul>
                     <li>
-                        <a>קורס אנימציה תלת מימדית תוכנת מאיה עם התמחות ב-ZBrush</a>
+                        <a class="drop-a-text">קורס אנימציה תלת מימדית תוכנת מאיה עם התמחות ב-ZBrush</a>
                     </li>
                     <li>
-                        <a>קורס פיתוח משחקים Gaming & VR</a>
+                        <a class="drop-a-text">קורס פיתוח משחקים Gaming & VR</a>
                     </li>
                     <li>
-                        <a>קורס DBA Master</a>
+                        <a class="drop-a-text">קורס DBA Master</a>
                     </li>
                     <li>
-                        <a>קורס פיתוח תוכנה NET Core.</a>
+                        <a class="drop-a-text">קורס פיתוח תוכנה NET Core.</a>
                     </li>
                     <li>
-                        <a>קורס מפתחי אוטומציה ל-QA</a>
+                        <a class="drop-a-text">קורס מפתחי אוטומציה ל-QA</a>
                     </li>
                 </ul>
             </div>
@@ -89,17 +89,17 @@
 
                         <ul>
                             <li>
-                                <a>אודות האקריו </a></li>
+                                <a class="drop-a-text">אודות האקריו </a></li>
             <li>
-                <a>שאלות נפוצות</a> </li>
+                <a class="drop-a-text">שאלות נפוצות</a> </li>
             <li>
-                <a>מרכז בחינות והסמכה</a> </li>
+                <a class="drop-a-text">מרכז בחינות והסמכה</a> </li>
             <li>
-                <a>דרושים</a> </li>
+                <a class="drop-a-text">דרושים</a> </li>
             <li>
-                <a>לוח חופשות</a> </li>
+                <a class="drop-a-text">לוח חופשות</a> </li>
             <li>
-                <a>מהעיתונות</a> </li>
+                <a class="drop-a-text">מהעיתונות</a> </li>
 
             </ul>
         </div>
@@ -110,22 +110,22 @@
 
                         <ul>
                             <li>
-                                <a>איך זה עובד</a></li>
+                                <a class="drop-a-text">איך זה עובד</a></li>
         <li>
-            <a>התחייבות חוזית לעבודה</a> </li>
+            <a class="drop-a-text">התחייבות חוזית לעבודה</a> </li>
         <li>
-            <a>סגל מרצים מנצח</a> </li>
+            <a class="drop-a-text">סגל מרצים מנצח</a> </li>
         <li>
-            <a>תכנית לימודים מקיפה</a> </li>
+            <a class="drop-a-text">תכנית לימודים מקיפה</a> </li>
         <li>
-            <a>מיקום מרכזי</a> </li>
+            <a class="drop-a-text">מיקום מרכזי</a> </li>
         <li>
-            <a>הסבת אקדמאים</a> </li>
+            <a class="drop-a-text">הסבת אקדמאים</a> </li>
         <li>
-            <a>HackerU Freelance - פרילנס
+            <a class="drop-a-text">HackerU Freelance - פרילנס
             </a> </li>
         <li>
-            <a>השלמה לתואר ראשון</a> </li>
+            <a class="drop-a-text">השלמה לתואר ראשון</a> </li>
 
         </ul>
         </div>
@@ -139,13 +139,13 @@
                             <li>
                                 <a>השמה</a></li>
         <li>
-            <a>משרות בלעדיות לסטודנטים</a> </li>
+            <a class="drop-a-text">משרות בלעדיות לסטודנטים</a> </li>
         <li>
-            <a>חברות איתן אנו עובדים</a> </li>
+            <a class="drop-a-text">חברות איתן אנו עובדים</a> </li>
         <li>
-            <a>מחפשים עובדים?</a> </li>
+            <a class="drop-a-text">מחפשים עובדים?</a> </li>
         <li>
-            <a>בניית קריירה בהייטק</a> </li>
+            <a class="drop-a-text">בניית קריירה בהייטק</a> </li>
 
         </ul>
         </div>
@@ -156,17 +156,17 @@
 
                         <ul>
                             <li>
-                                <a>מפות הגעה X</a></li>
+                                <a class="drop-a-text">מפות הגעה X</a></li>
         <li>
-            <a>לימודים במרכז-רמת גן</a> </li>
+            <a class="drop-a-text">לימודים במרכז-רמת גן</a> </li>
         <li>
-            <a>לימודים בחיפה</a> </li>
+            <a class="drop-a-text">לימודים בחיפה</a> </li>
         <li>
-            <a>לימדים בחיפה </a> </li>
+            <a class="drop-a-text">לימדים בחיפה </a> </li>
         <li>
-            <a>לימודים בירושלים</a> </li>
+            <a class="drop-a-text">לימודים בירושלים</a> </li>
         <li>
-            <a>לימודים בבאר שבע</a> </li>
+            <a class="drop-a-text">לימודים בבאר שבע</a> </li>
 
         </ul>
         </div>
@@ -177,13 +177,13 @@
 
                         <ul>
                             <li>
-                                <a>סיפורי הצלחה</a></li>
+                                <a class="drop-a-text">סיפורי הצלחה</a></li>
         <li>
-            <a>עדויות בוגרים</a> </li>
+            <a class="drop-a-text">עדויות בוגרים</a> </li>
         <li>
-            <a>עדויות מעסיקים</a> </li>
+            <a class="drop-a-text">עדויות מעסיקים</a> </li>
         <li>
-            <a>עבודות בוגרים</a> </li>
+            <a class="drop-a-text">עבודות בוגרים</a> </li>
 
 
         </ul>
@@ -1485,20 +1485,64 @@
 
     }
 
+    let mainNavContainer = document.getElementById("main-nav-container");
 
     let mainNavLink = document.getElementById("main-nav-links-container").childNodes;
     mainNavLink = [mainNavLink[1], mainNavLink[4], mainNavLink[7], mainNavLink[10], mainNavLink[13], mainNavLink[16]];
+    let dropAText = document.getElementsByClassName("drop-a-text");
+    let currentDrop2 = document.getElementsByClassName("main-nav-dropdown-menu");
+    for (let i = 0; i < currentDrop2.length; i++) {
+        currentDrop2[0].style.marginBottom = "-120px";
+    }
 
     for (let i = 0; i < mainNavLink.length; i++) {
         let dropDownNum = i + 1;
         let currentDrop = document.getElementById("main-nav-dropdown-menu" + dropDownNum);
         mainNavLink[i].addEventListener('click', function() {
-            if (currentDrop.style.display === "none") {
-                currentDrop.style.display = "flex";
-                closeOtherDrops(dropDownNum);
+            if (window.matchMedia("(max-width: 1015px)").matches) {
+                if (currentDrop.style.display === "none") {
+                    mainNavContainer.style.zIndex = "50";
+
+                    currentDrop.style.position = "static";
+                    currentDrop.style.backgroundColor = "white";
+                    currentDrop.style.zIndex = "50";
+
+                    let a = currentDrop.getElementsByTagName("li");
+                    for (let i = 0; i < a.length; i++) {
+                        a[i].style.width = "50rem";
+                        a[i].style.transform = "translateX(-4rem) translateY(-7rem)";
+                        if (i !== 0)
+                            a[i].style.borderTop = "dotted RGB(170,214,190) 1px";
+                    }
+
+                    for (let i = 0; i < dropAText.length; i++) {
+                        dropAText[i].style.color = "RGB(48,48,48)";
+                        dropAText[i].style.fontSize = "1rem";
+                        dropAText[i].style.fontWeight = "400";
+                        dropAText[i].style.height = "auto";
+                    }
+                    currentDrop.style.transform = "translateX(0) translateY(0rem) ";
+                    currentDrop.style.display = "block";
+
+                    closeOtherDrops(dropDownNum);
+                } else {
+                    currentDrop.style.display = "none";
+                }
+
             } else {
-                currentDrop.style.display = "none";
+                if (currentDrop.style.display === "none") {
+                    currentDrop.style.display = "flex";
+                    closeOtherDrops(dropDownNum);
+                } else {
+                    currentDrop.style.display = "none";
+                }
+
+
             }
+
+
+
+
 
 
         });
@@ -1516,9 +1560,14 @@
 
     let mobileMenuButton = document.getElementById("mobile-menu-button");
     let mainNav = document.getElementById("main-nav");
-    let mainNavContainer = document.getElementById("main-nav-container");
     let mobileLinksContainer = document.getElementById("main-nav-links-container");
     let triangle = document.getElementsByClassName("triangle");
+    let mainNavDropdownMenu = document.getElementsByClassName("main-nav-dropdown-menu");
+    let aInmainNavDropdownMenu = document.getElementsByClassName("main-nav-dropdown-menu")[0].querySelectorAll("a");
+
+
+
+
     //mobileLinksContainer.style.opacity = "0";
     let mobileLinks = mobileLinksContainer.childNodes;
     let mobileNavLink = document.getElementsByClassName("main-nav-link");
@@ -1530,8 +1579,8 @@
             mobileMenuButton.children[1].style.transform = "translateX(40px)";
             mobileMenuButton.children[1].style.opacity = "0";
             mobileMenuButton.children[1].style.transition = "0.4s";
-            mobileMenuButton.children[0].style.transform = "rotate(-45deg) translateX(-72px) translateY(-72px) ";
-            mobileMenuButton.children[2].style.transform = "rotate(45deg) ";
+            mobileMenuButton.children[0].style.transform = "rotate(315deg) translateX(-72px) translateY(-72px) ";
+            mobileMenuButton.children[2].style.transform = "rotate(-315deg) ";
             mobileMenuButton.style.transition = "all 3s"
             mainNav.style.height = "25rem";
             mainNav.style.transition = "all 0.5s";
